@@ -6,8 +6,8 @@ import time
 # flake8: noqa - we have a lot of locales and this is convenient
 from asm3.locales import *
 
-VERSION = "45u [Mon 22 Nov 16:44:59 GMT 2021]"
-BUILD = "11221644"
+VERSION = "45u [Tue 23 Nov 09:12:53 GMT 2021]"
+BUILD = "11230912"
 
 DMY = ( "%d/%m/%Y", "%d/%m/%y" )
 HDMY = ( "%d-%m-%Y", "%d-%m-%y" )
